--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
+      "electron/*": ["./electron/*"],
     },
     "target": "ES2020",
     "useDefineForClassFields": true,
