--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
-VITE_BASE_URL_API=http://localhost:7000
 VITE_STATIC_FILES=https://api.facell.com
-BASE_URL_API=http://localhost:7000
+
+# VITE_BASE_URL_API=http://localhost:7000
+# BASE_URL_API=http://localhost:7000
+
+VITE_BASE_URL_API=https://api.facell.com
+BASE_URL_API=https://api.facell.com
